samples/_failures_safe/1761247473_ac4f0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9949ff02.c: In function ‘main’:
./samples/SAFE/__tmp_9949ff02.c:165:31: error: expected ‘)’ at end of input
  165 |     size_t len = strlen(buffer
      |                        ~      ^
      |                               )
./samples/SAFE/__tmp_9949ff02.c:165:5: error: expected declaration or statement at end of input
  165 |     size_t len = strlen(buffer
      |     ^~~~~~
